<resources>


	<string name="app_name">Captag</string>


	<string name="action_joinTeam">Join team</string>
	<string name="action_leaveTeam">Leave team</string>
	<string name="action_logout">Logout</string>
	<string name="action_retry">Retry</string>
	<string name="action_scanQrCode">Scan QR code</string>
	<string name="action_switchTeam">Switch team</string>
	<string name="action_captureTag">Capture tag</string>


	<!-- errors -->
	<string name="error_capturingTagFailed">Capturing tag failed</string>
	<string name="error_joiningTeamFailed">Joining team failed</string>
	<string name="error_leavingTeamFailed">Leaving team failed</string>
	<string name="error_loginFailed">Login failed</string>
	<string name="error_loadingGamesFailed">Loading games failed</string>
	<string name="error_loadingTeamsFailed">Loading teams failed</string>
	<string name="error_loadingTeamMembersFailed">Loading team members failed</string>
	<string name="error_noGamesFound">No games found</string>
	<string name="error_signUpFailed">Sign up failed</string>

	<!-- hints -->
	<string name="hint_email">E-Mail</string>
	<string name="hint_password">Password</string>
	<string name="hint_username">Username</string>

	<!-- messages -->
	<string name="message_gameAlreadyStarted">Game already started</string>

	<!-- subheads -->
	<string name="subhead_games">Games</string>
	<string name="subhead_teams">Teams</string>
	<string name="subhead_teamMembers">Team members</string>

	<!-- titles -->
	<string name="title_button_joinGame">Join</string>
	<string name="title_button_joinTeam">Join</string>
	<string name="title_button_leaveGame">Leave</string>
	<string name="title_button_leaveTeam">Leave</string>
	<string name="title_button_login">Login</string>
	<string name="title_button_play">Play</string>
	<string name="title_button_signUp">Sign up</string>

	<!-- Fragment titles -->
	<string name="title_fragment_game_browser">Games</string>
	<string name="title_fragment_lobby">Lobby</string>
	<string name="title_fragment_login">Login</string>
	<string name="title_fragment_signup">Sign up</string>

</resources>
